Fix Java 21 collection method warnings and module system configuration
- Updated pom.xml: Replace source/target with 'release 21' for proper Java 21 module system configuration
- Fixed Java 21 collection method warnings:
  - ActivityMonitorPanel.java: .remove(0) → .removeFirst()
  - SystemActivityBus.java: .remove(0) → .removeFirst()
  - SignalAgent.java: .remove(0) → .removeFirst()
  - IndicatorCalculator.java: .add(0, null) → .addFirst(null)
- All 101 tests pass (1 skipped)